2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/raid.c (grub_util_raid_getmembers): Close fd before returning.

	Reported by: David Volgyes <dvolgyes>.

2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (rs_recover) [STANDALONE]:
	Prevent memory leak.

2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (rs_recover): Prevent memory leak.
	(main): Close file.
	Reported by: David Volgyes <dvolgyes>.

2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (grub_cpu_xnu_fill_devprop): Don't attempt
	to continue if allocation is failed.

	Reported by: David Volgyes <dvolgyes>.

2011-06-23  David Volgyes <dvolgyes>

	* grub-core/bus/usb/ohci.c (grub_ohci_pci_iter): Avoid NULL-pointer
	dereference.

2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix spurious warning.

	* grub-core/partmap/acorn.c (grub_acorn_boot_block): Make a union.
	(acorn_partition_map_find): Use .bin member.

2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/getroot.c (grub_guess_root_device): Don't accept
	/dev/root as a valid device.

2011-06-23  Jim Meyering  <meyering@redhat.com>

	Avoid NULL deref in grub_device_open.

	* grub-core/kern/device.c (grub_device_open): Don't dereference
	a NULL pointer upon failed grub_env_get.

2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Support non-512B sectors and agglomerate reads.

	* Makefile.util.def (libgrubmods.a): Add grub-core/commands/testload.c.
	* grub-core/disk/efi/efidisk.c (grub_efidisk_data): Remove disk_io.
	(disk_io_guid): Removed.
	(make_devices): Locate solely by BlockIO.
	(grub_efidisk_open): Fill log_sector_size and total_sectors.
	(grub_efidisk_read): Use read_blocks.
	(grub_efidisk_write): Use write_blocks.
	* grub-core/disk/i386/pc/biosdisk.c (grub_biosdisk_open): Fill
	log_sector_size.
	(get_safe_sectors): Handle non-512B sectors.